--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "express-session": "^1.15.6",
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
