--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "path": "^0.12.7"
   },
   "scripts": {
-    "build": "node server.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run",
+    "deploy": "gh-pages -d"
   }
 }
