--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "path": "^0.12.7"
   },
   "scripts": {
-    "predeploy": "npm run",
-    "deploy": "gh-pages -d"
+    "start": "npm run build", 
+    "build": "webpack -d --devtool && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
