--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "path": "^0.12.7"
   },
   "scripts": {
-     "build": "npm run"
+     "build": "npm run",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   }
